<resources>
    <string name="app_name">FutsalBook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_about">About us</string>
    <string name="title_profile">Profile</string>
    <string name="title_menu">Menu</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_price">Price Details</string>
    <string name="title_booking">Book Ground</string>
    <string name="title_activity_about_us">Map</string>
</resources>
